first HZ commit

--- a/index.html
+++ b/index.html
@@ -1,10 +1,139 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HZ-projekt</title>
+	<title>HZ-projekt верстка сайтов</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/slideShow2.css">
+	<link rel="stylesheet" type="text/css" href="css/st_section.css">
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+	<script type="text/javascript" src="js/slideShow2.js"></script>
 </head>
 <body>
-	<header><p id="head">You are welcome</p></header>
+		
+		<!--   HEADER   -->
+	
+	<header>
+		<div>
+			<a href="https://github.com/ShiroYashiro" target="_blank">
+				<p id="head">Shiro Yashiro</p>
+			</a>
+		</div>
+
+		<!-- NAVIGATION -->
+		
+		<nav id="h">
+			<a href="index.html" title="home">
+				<p class="stNavHead">Home</p>
+			</a>
+			<a href="catalog.html" title="catalog">
+				<p class="stNavHead">Catalog</p>
+			</a>
+			<a href="portfolio.html" title="portfolio">
+				<p class="stNavHead">Portfolio</p>
+			</a>
+			<a href="feedback.html" title="feedback">
+				<p class="stNavHead">Feedback</p>
+			</a>
+		</nav>
+	</header>
+
+		<!-- CONTENT -->
+
+	<div id="wrapper">
+		<section>
+			<p id="ifu">Information for you</p>
+			<div name="services" class="infoClient">
+				<p class="paragraph">Меня зовут Shiro, <span class="spec">Витаю вас!</span></p>
+				<p>Я занимаюсь разработками различнх программ и приложений,</p>
+				<p>а также full-stack написанием сайтов, сюда входит:</p>
+				<ul>
+					<li>Фронт-энд</li>
+					<li>Верстка сайта</li>
+					<li>И бэк-энд</li>
+				</ul>
+				<p>Свою работу я выполняю всегда качественно и быстро!</p>
+				<p class="spec">Можете мне дверять!</p>
+			</div>
+			<div name="lead_time" class="infoClient">
+				<p class="paragraph"><span class="spec">Сроки</span> выполнения работы зависят от заказа.</p>
+				<p>Мне <span class="spec">необходимо знать</span>, что именно вы хотите получить, поэтому</p>
+				<p>расписывайте ваш заказ настолько подробно, на сколько это возможно.</p>
+				<p></p>
+				<ul>
+					<li>Разработка сайта с нуля фул-стек займет 10 дней(+-2 дня)</li>
+					<li>На версту уйдет всего 2-3 дня</li>
+					<li>Фронт 1-2 дня</li>
+					<li>Бэк 3-4 дня</li>
+				</ul>
+			</div>
+			<div name="pay" class="infoClient">
+				<p class="paragraph"><span class="spec">Каждый трудящийся достоин пропитания!))</span></p>
+				<p>Что касается расценок, то тут все относительно дешево:</p>
+				<ul>
+					<li>Фронт 2,000-3,500 руб</li>
+					<li>Верстка 5,000-6,000 руб</li>
+					<li>Бэк 10,000-15,000 руб</li>
+				</ul>
+				<p class="spec">Естественно особые заказы обсуждаются особо)..</p>
+				<p class="paragraph">А так же я был бы рад если бы вы купили совершенно вам</p>
+				<p>не нужный донат в моей группе в ВК(ссылки слева)</p>
+			</div>
+			<div name="adress" class="infoClient">
+				<p class="paragraph">
+					<span class="spec">Как вы можете со мной сязаться(?):</span>
+				</p>
+				<ol>
+					<li>Естественно через фитбэк, там есть e-mail и соц. сети</li>
+					<li>Так же вы можете позвонить на тел: +7(904)364-33-76.</li>
+				</ol>
+				<p class="spec">Но все же лучше напишите мне в соц сети или на почту ;)</p>
+			</div>
+		</section>
+		<aside>
+			<p id="ad">Advertising</p>
+
+			<!-- SLIDE SHOW css/slideShow2.css & js/slideShow2.js -->
+			
+			<div id="bord1"> 
+				<ul class="slides">
+					<li class="slide"><a href="https://vk.com/club_for_down" target="_blank">Наушники</a></li>
+					<li class="slide"><a href="https://vk.com/club_for_down" target="_blank">Дакимакуры</a></li>
+					<li class="slide"><a href="https://vk.com/club_for_down" target="_blank">Кеды</a></li>
+					<li class="slide"><a href="https://vk.com/club_for_down" target="_blank">Верхняя одежда</a></li>
+					<li class="slide"><a href="https://vk.com/club_for_down" target="_blank">Манга и многое другое</a></li>
+				</ul>
+			</div>
+			<div id="bord2">
+				<a href="https://vk.com/club_for_down" title="Аниме-спортсмен" target="_blank"><img src="img/bord2.png"></a>
+			</div>
+			<p id="ad_bord2">Мэгумин по хорошей цене</p>
+		</aside>
+	</div>
+
+	<!-- FOOTER -->
+
+	<footer>
+		<nav >
+			<ul id="f">
+				<li class="footList"><a href="index.html" title="home">
+				<p class="stNavFoot">Home</p></a>
+				</li>
+				<li class="footList"><a href="catalog.html" title="catalog">
+				<p class="stNavFoot">Catalog</p></a>
+				</li>
+				<li class="footList"><a href="portfolio.html" title="portfolio">
+				<p class="stNavFoot">Portfolio</p></a>
+				</li>
+				<li class="footList"><a href="feedback.html" title="feedback">
+				<p class="stNavFoot">Feedback</p></a>	
+				</li>
+			</ul>
+		</nav>
+		<div id="info"></div>
+		<div id="devel"><p>Created by </p>
+			<a href="https://github.com/ShiroYashiro" target="_blank">
+				<p id="foot">Shiro Yashiro</p></a>
+		</div>
+	</footer>
 </body>
 </html>
