Revert "css init commit"
This reverts commit d5847cc449453681ef760298867205b602dd144c.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<p id="number_phone">9090-XXXX-XXXX</p>
 			<img src="img/vk.png" width="28" height="28">
 			<p><a href="https://vk.com/lis_tsuki" target="_blanck">
-			<span>Моя страница в VK</span></a></p>
+			Моя страница в VK</a></p>
 		</div>
 	</div>
 	<div id="content">
@@ -30,9 +30,7 @@
 			</div>
 			<div id="form">
 				<input type="email" name="email" placeholder="E-mail...">
-				<button class="button" type="submit" onClick="alert('Вы отправили заявку!')">
-					<span>Отправить заявку </span>
-				</button>
+				<button type="submit">Отправить заявку</button>
 			</div>
 		</div>
 	</div>
