--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="css/st_HP.css">
 </head>
 <body>
+
+			<!-- HEADER -->
+
 	<div id="top">
 		<div id="info">
 			<img src="img/phone.png" width="28" height="28">
@@ -15,6 +18,9 @@
 			Моя страница в VK</a></p>
 		</div>
 	</div>
+
+		<!-- CENTER CONTENT -->
+
 	<div id="content">
 		<div id="center">
 			<p id="atikl">Верстка сайтов - 10 000 рублей за макет</p>
