css init commit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<p id="number_phone">9090-XXXX-XXXX</p>
 			<img src="img/vk.png" width="28" height="28">
 			<p><a href="https://vk.com/lis_tsuki" target="_blanck">
-			Моя страница в VK</a></p>
+			<span>Моя страница в VK</span></a></p>
 		</div>
 	</div>
 
@@ -36,7 +36,9 @@
 			</div>
 			<div id="form">
 				<input type="email" name="email" placeholder="E-mail...">
-				<button type="submit">Отправить заявку</button>
+				<button class="button" type="submit" onClick="alert('Вы отправили заявку!')">
+					<span>Отправить заявку </span>
+				</button>
 			</div>
 		</div>
 	</div>
