--- a/index.html
+++ b/index.html
@@ -7,40 +7,28 @@
 </head>
 <body>
 
-			<!-- HEADER -->
+		<!-- HEADER -->
 
 	<div id="top">
-		<div id="info">
-			<img src="img/phone.png" width="28" height="28">
-			<p id="number_phone">9090-XXXX-XXXX</p>
-			<img src="img/vk.png" width="28" height="28">
-			<p><a href="https://vk.com/lis_tsuki" target="_blanck">
-			<span>Моя страница в VK</span></a></p>
-		</div>
+		<p id="quest"></p>
 	</div>
 
 		<!-- CENTER CONTENT -->
 
 	<div id="content">
-		<div id="center">
-			<p id="atikl">Верстка сайтов - 10 000 рублей за макет</p>
-			<div id="list">
-				<ul id="pictur">
-					<li><img src="img/smile.png" width="35" height="35">
-						<p>Денис Лис</p></li>
-					<li><img src="img/code.png" width="35" height="35">
-						<p>С удовольствием сверстаю ваш макет</p></li>
-					<li><img src="img/like.png" width="35" height="35">
-						<p>Который будет хорошо продвигаться в поиске</p></li>
-				</ul>
-			</div>
-			<div id="form">
-				<input type="email" name="email" placeholder="E-mail...">
-				<button class="button" type="submit" onClick="alert('Вы отправили заявку!')">
-					<span>Отправить заявку </span>
-				</button>
-			</div>
+		<p id="titleDir"></p>
+		<div id="list">
+			<ul id="answers">
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
 		</div>
 	</div>
+	
+		<!-- SCRIPTS -->
+	
+	<script scr="js/main.js"></script>
 </body>
 </html>
